--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,5 @@ itsdangerous==1.1.0       # via flask
 jinja2==2.10.3            # via flask
 markupsafe==1.1.1         # via jinja2
 pyyaml==5.1.2
+schedule==0.6.0
 werkzeug==0.16.0          # via flask
